projects/lungmen.akn/src/apps/ai-platform/open-webui/open-webui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/version: 0.8.8
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: open-webui
      app.kubernetes.io/instance: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/component: open-webui
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/name: open-webui
        app.kubernetes.io/version: 0.8.8
    spec:
      automountServiceAccountToken: false
      serviceAccountName: open-webui-sa
      enableServiceLinks: false
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          tty: true
          resources:
            requests:
              cpu: 10m
              memory: 1.5Gi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            failureThreshold: 1
          readinessProbe:
            httpGet:
              path: /health/db
              port: http
            failureThreshold: 1
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 20
          volumeMounts:
            - name: data
              mountPath: /app/backend/data
            - name: config
              mountPath: /app/backend/data/config.json
              subPath: config.json
              readOnly: true
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: open-webui-config
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  labels:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/version: 0.8.8
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/version: 0.8.8
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
