projects/lungmen.akn/src/apps/ai-platform/open-webui/pipelines.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-pipelines
  labels:
    app.kubernetes.io/component: pipelines
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/version: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: pipelines
      app.kubernetes.io/instance: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/component: pipelines
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/name: pipelines
        app.kubernetes.io/version: alpha
    spec:
      automountServiceAccountToken: false
      serviceAccountName: open-webui-pipelines
      enableServiceLinks: false
      containers:
        - name: pipelines
          image: ghcr.io/open-webui/pipelines
          imagePullPolicy: Always
          ports:
            - containerPort: 9099
              name: http
          tty: true
          resources:
            requests:
              cpu: 5m
              memory: 192Mi
            limits:
              memory: 192Mi
          volumeMounts:
            - name: data
              mountPath: /app/pipelines
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-webui-pipelines
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui-pipelines
  labels:
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/component: pipelines
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/version: alpha
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/component: pipelines
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/version: alpha
  ports:
    - name: http
      port: 9099
      targetPort: http
      protocol: TCP
