projects/lungmen.akn/src/apps/ai-platform/open-webui/tika.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-tika
  labels:
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: tika
    app.kubernetes.io/version: 3.2.3.0-full
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: open-webui
      app.kubernetes.io/name: tika
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/name: tika
    spec:
      serviceAccountName: open-webui-tika
      containers:
        - name: tika
          image: apache/tika
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9998
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 9998
              scheme: HTTP
            periodSeconds: 5
            failureThreshold: 20
            timeoutSeconds: 30
            initialDelaySeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 9998
            periodSeconds: 5
            failureThreshold: 20
            timeoutSeconds: 30
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 512Mi
          securityContext:
            runAsUser: 35002
            runAsGroup: 35002
            runAsNonRoot: true
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: sec-ctx-vol
              mountPath: /tmp
      volumes:
        - name: sec-ctx-vol
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui-tika
  labels:
    app.kubernetes.io/name: tika
    app.kubernetes.io/component: tika
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/version: 3.2.3.0-full
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tika
    app.kubernetes.io/component: tika
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/version: 3.2.3.0-full
  ports:
    - name: http
      port: 9998
      targetPort: http
      protocol: TCP
