projects/lungmen.akn/src/apps/ai-platform/open-webui/open-webui.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    tailscale.com/proxy-class: restricted
  name: ai
spec:
  defaultBackend:
    service:
      name: open-webui
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - ai
